tests/snapshots/examples_fixtures/aoc__2025__aoc_day8_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day8_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_part1.flx:24:20
   |
24 |         let left = slice(arr, 0, idx)
   |                    ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_part1.flx:25:21
   |
25 |         let right = slice(arr, idx + 1, len(arr))
   |                     ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `concat`.

  examples/aoc/2025/aoc_day8_part1.flx:26:9
   |
26 |         concat(concat(left, [|value|]), right)
   |         ^^^^^^

Hint:
  Define it first: let concat = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day8_part1.flx:49:13
   |
49 |             push(acc, (d * 1000000) + pair_code(i, j))
   |             ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_part1.flx:61:13
   |
61 |     let s = put({}, "p", parents)
   |             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_part1.flx:62:5
   |
62 |     put(s, "sz", sizes)
   |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_part1.flx:66:11
   |
66 |     match get(state, "p") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_part1.flx:73:11
   |
73 |     match get(state, "sz") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_part1.flx:106:14
    |
106 | let points = [split_ints(trim(line), ",") | line <- lines, trim(line) != ""]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_part1.flx:108:12
    |
108 | let idxs = range(0, n)
    |            ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_part1.flx:112:1
    |
112 | fold(idxs, [||], /(acc, i) -> {
    | ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_part1.flx:118:16
    |
118 | let top_keys = slice(sorted_keys, 0, 1000)
    |                ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_part1.flx:120:25
    |
120 | let parents0 = to_array(range(0, n))
    |                         ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_part1.flx:121:23
    |
121 | let sizes0 = to_array(map(range(0, n), /_ -> 1))
    |                       ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_part1.flx:123:14
    |
123 | let state1 = fold(top_keys, state0, /(st, k) -> union_key(st, k))
    |              ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_part1.flx:127:13
    |
127 | let comps = [int_at(sizes1, i) | i <- range(0, len(parents1)), int_at(parents1, i) == i]
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;

Found 16 errors.
== stdout ==
<not executed>
